name:                preev
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              John Olsson <john@cryon.se>
maintainer:          John Olsson <john@cryon.se>
-- copyright:
category:            Economics
build-type:          Simple
cabal-version:       >=1.8

executable preev
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base == 4.*,
                       optparse-applicative == 0.7.*,
                       http-conduit == 2.0.*,
                       bytestring == 0.10.*,
                       aeson == 0.7.*,
                       containers == 0.5.*,
                       text == 1.1.*
